lash-embed/tests/ui/session_control_flat_methods_are_not_public.rs
async fn check(control: lash_embed::control::SessionControl) {
    let _ = control.tool_state().await;
}

fn main() {}
